--- a/work.ipynb
+++ b/work.ipynb
@@ -893,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 61,
    "id": "232f6b00",
    "metadata": {},
    "outputs": [
@@ -918,12 +918,12 @@
        "SeedlingsPerPit                        289\n",
        "TransplantingIrrigationHours           193\n",
        "TransIrriCost                          882\n",
-       "StandingWater                          238\n",
-       "BasalDAP                               543\n",
-       "BasalUrea                             1704\n",
+       "StandingWater                            0\n",
+       "BasalDAP                                 0\n",
+       "BasalUrea                                0\n",
        "1tdUrea                                  0\n",
-       "1appDaysUrea                           556\n",
-       "Harv_hand_rent                         252\n",
+       "1appDaysUrea                             0\n",
+       "Harv_hand_rent                           0\n",
        "Acre                                     0\n",
        "RcNursEstDate_Year                       0\n",
        "RcNursEstDate_Month                      0\n",
@@ -934,7 +934,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -945,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 62,
    "id": "c053fac0",
    "metadata": {},
    "outputs": [
@@ -955,13 +955,13 @@
        "dtype('float64')"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df2[\"Harv_hand_rent\"].dtype"
+    "df2[\"TransIrriCost\"].dtype"
    ]
   },
   {
@@ -1096,20 +1096,39 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db0144e1",
+   "id": "93dc4e5d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50872adf",
    "metadata": {},
    "outputs": [],
    "source": [
+    "TransIrriCost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "c5ccf46d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "# Step 2: Identify missing values in the numeric column\n",
-    "missing_values = df2['RcNursEstDate_Year'].isnull()\n",
+    "missing_values = df2['StandingWater'].isnull()\n",
     "\n",
     "# Step 3: Generate random numbers within the range of existing values\n",
-    "mean_value = df2['RcNursEstDate_Year'].mean()\n",
-    "std_dev = df2['RcNursEstDate_Year'].std()\n",
+    "mean_value = df2['StandingWater'].mean()\n",
+    "std_dev = df2['StandingWater'].std()\n",
     "\n",
     "# Convert low and high to the same data type as the column\n",
-    "low_value = df2['RcNursEstDate_Year'].min()\n",
-    "high_value = df2['RcNursEstDate_Year'].max()\n",
+    "low_value = df2['StandingWater'].min()\n",
+    "high_value = df2['StandingWater'].max()\n",
     "\n",
     "random_values = np.random.normal(loc=mean_value, scale=std_dev, size=sum(missing_values))\n",
     "\n",
@@ -1117,13 +1136,122 @@
     "random_values = np.clip(random_values, low_value, high_value)\n",
     "\n",
     "# Step 4: Fill missing values with the randomly generated numbers\n",
-    "df2.loc[missing_values, 'RcNursEstDate_Year'] = random_values\n"
+    "df2.loc[missing_values, 'StandingWater'] = random_values\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "0c6a8670",
+   "execution_count": 57,
+   "id": "db75f52f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 2: Identify missing values in the numeric column\n",
+    "missing_values = df2['BasalDAP'].isnull()\n",
+    "\n",
+    "# Step 3: Generate random numbers within the range of existing values\n",
+    "mean_value = df2['BasalDAP'].mean()\n",
+    "std_dev = df2['BasalDAP'].std()\n",
+    "\n",
+    "# Convert low and high to the same data type as the column\n",
+    "low_value = df2['BasalDAP'].min()\n",
+    "high_value = df2['BasalDAP'].max()\n",
+    "\n",
+    "random_values = np.random.normal(loc=mean_value, scale=std_dev, size=sum(missing_values))\n",
+    "\n",
+    "# Clip the random values to the range of the existing values\n",
+    "random_values = np.clip(random_values, low_value, high_value)\n",
+    "\n",
+    "# Step 4: Fill missing values with the randomly generated numbers\n",
+    "df2.loc[missing_values, 'BasalDAP'] = random_values\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "486b5253",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 2: Identify missing values in the numeric column\n",
+    "missing_values = df2['BasalUrea'].isnull()\n",
+    "\n",
+    "# Step 3: Generate random numbers within the range of existing values\n",
+    "mean_value = df2['BasalUrea'].mean()\n",
+    "std_dev = df2['BasalUrea'].std()\n",
+    "\n",
+    "# Convert low and high to the same data type as the column\n",
+    "low_value = df2['BasalUrea'].min()\n",
+    "high_value = df2['BasalUrea'].max()\n",
+    "\n",
+    "random_values = np.random.normal(loc=mean_value, scale=std_dev, size=sum(missing_values))\n",
+    "\n",
+    "# Clip the random values to the range of the existing values\n",
+    "random_values = np.clip(random_values, low_value, high_value)\n",
+    "\n",
+    "# Step 4: Fill missing values with the randomly generated numbers\n",
+    "df2.loc[missing_values, 'BasalUrea'] = random_values\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "fa165d1c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Step 2: Identify missing values in the numeric column\n",
+    "missing_values = df2['1appDaysUrea'].isnull()\n",
+    "\n",
+    "# Step 3: Generate random numbers within the range of existing values\n",
+    "mean_value = df2['1appDaysUrea'].mean()\n",
+    "std_dev = df2['1appDaysUrea'].std()\n",
+    "\n",
+    "# Convert low and high to the same data type as the column\n",
+    "low_value = df2['1appDaysUrea'].min()\n",
+    "high_value = df2['1appDaysUrea'].max()\n",
+    "\n",
+    "random_values = np.random.normal(loc=mean_value, scale=std_dev, size=sum(missing_values))\n",
+    "\n",
+    "# Clip the random values to the range of the existing values\n",
+    "random_values = np.clip(random_values, low_value, high_value)\n",
+    "\n",
+    "# Step 4: Fill missing values with the randomly generated numbers\n",
+    "df2.loc[missing_values, '1appDaysUrea'] = random_values\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "2c8ac402",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 2: Identify missing values in the numeric column\n",
+    "missing_values = df2['Harv_hand_rent'].isnull()\n",
+    "\n",
+    "# Step 3: Generate random numbers within the range of existing values\n",
+    "mean_value = df2['Harv_hand_rent'].mean()\n",
+    "std_dev = df2['Harv_hand_rent'].std()\n",
+    "\n",
+    "# Convert low and high to the same data type as the column\n",
+    "low_value = df2['Harv_hand_rent'].min()\n",
+    "high_value = df2['Harv_hand_rent'].max()\n",
+    "\n",
+    "random_values = np.random.normal(loc=mean_value, scale=std_dev, size=sum(missing_values))\n",
+    "\n",
+    "# Clip the random values to the range of the existing values\n",
+    "random_values = np.clip(random_values, low_value, high_value)\n",
+    "\n",
+    "# Step 4: Fill missing values with the randomly generated numbers\n",
+    "df2.loc[missing_values, 'Harv_hand_rent'] = random_values\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "502a0eff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1150,7 +1278,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "fef80fe8",
+   "id": "7103b3fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1177,7 +1305,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "34f83b9e",
+   "id": "7b4b1be0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1204,7 +1332,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "edfc324e",
+   "id": "3bce98bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1231,7 +1359,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9bcd5795",
+   "id": "1893dda5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1239,7 +1367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "197b0b96",
+   "id": "d95ac324",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1247,7 +1375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "027502c5",
+   "id": "4aa7a649",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1255,7 +1383,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed82f616",
+   "id": "33f87d52",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1298,7 +1426,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f23e0fe",
+   "id": "2211f7dd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1306,7 +1434,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c5c83fb",
+   "id": "ca294e16",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1314,7 +1442,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7b0a977",
+   "id": "198a8b68",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1322,7 +1450,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f342f2d5",
+   "id": "e106f9dc",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1330,7 +1458,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2e76df9",
+   "id": "51754672",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1338,7 +1466,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51b62abb",
+   "id": "487d85e2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1346,7 +1474,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67d368bd",
+   "id": "5ee8cb65",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1354,7 +1482,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b69d24c",
+   "id": "e948fb8d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1362,7 +1490,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73cd009d",
+   "id": "9c5a71d7",
    "metadata": {},
    "outputs": [],
    "source": []
