--- a/python tutorial.ipynb
+++ b/python tutorial.ipynb
@@ -1042,6 +1042,268 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ee22f108",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb1fff4e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e9ff6fc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a504092a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "7e229d9f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter the first number 7\n",
+      "enter the second number 9\n",
+      "the summation of the two number entered is  16\n"
+     ]
+    }
+   ],
+   "source": [
+    "num1 = int (    input(\"enter the first number \")    )\n",
+    "num2 = int (input(\"enter the second number \"))\n",
+    "total = num1 + num2\n",
+    "print(\"the summation of the two number entered is \", total)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1eb7520e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "int\n",
+    "float\n",
+    "str\n",
+    "complex"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "34c20a73",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w = \"12\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "5386dea2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(w)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "90aeaa59",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w= int(w)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "d574cb04",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(w)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "09970a0b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "please enter you born year 2000\n",
+      "Your current Age is  23\n"
+     ]
+    }
+   ],
+   "source": [
+    "# write python script that can ask users for their born year, then return the current age of such user\n",
+    "born_year = int (input(\"please enter you born year \"))\n",
+    "age = 2023 -born_year\n",
+    "print(\"Your current Age is \", age)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c454bd0e",
+   "metadata": {},
+   "source": [
+    "# Operators In Python\n",
+    " In python Operators are used to manipulate Operand\n",
+    "\n",
+    "1. Arithmentic\n",
+    "2. Assignment\n",
+    "3. Comparision\n",
+    "4. Membership\n",
+    "5. Identity \n",
+    "6. Logical \n",
+    "7. Bitwise \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "71ab351d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2 + 6 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f29d91f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e04e3f06",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "115d8d62",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d3bba83",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b041685f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ae75f29",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dcff74d3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2dd23a34",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40975c87",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "beae1d9a",
    "metadata": {},
    "outputs": [],
