--- a/python tutorial.ipynb
+++ b/python tutorial.ipynb
@@ -1042,7 +1042,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee22f108",
+   "id": "f1193686",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1050,7 +1050,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb1fff4e",
+   "id": "d349944f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1058,7 +1058,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e9ff6fc",
+   "id": "1db52815",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1066,7 +1066,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a504092a",
+   "id": "96aa1a44",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1074,7 +1074,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "7e229d9f",
+   "id": "acaaca40",
    "metadata": {},
    "outputs": [
     {
@@ -1097,7 +1097,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1eb7520e",
+   "id": "aa50e241",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1110,7 +1110,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "34c20a73",
+   "id": "b09d05a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1120,7 +1120,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "5386dea2",
+   "id": "e06f1f24",
    "metadata": {},
    "outputs": [
     {
@@ -1141,7 +1141,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "90aeaa59",
+   "id": "28ab5810",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1151,7 +1151,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d574cb04",
+   "id": "5cc8cb84",
    "metadata": {},
    "outputs": [
     {
@@ -1172,7 +1172,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "09970a0b",
+   "id": "668fb920",
    "metadata": {},
    "outputs": [
     {
@@ -1193,7 +1193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c454bd0e",
+   "id": "ffa84062",
    "metadata": {},
    "source": [
     "# Operators In Python\n",
@@ -1209,30 +1209,149 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b5403763",
+   "metadata": {},
+   "source": [
+    "# Arithmetic"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "71ab351d",
+   "execution_count": 11,
+   "id": "ee28a20c",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "8"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
     }
    ],
    "source": [
-    "2 + 6 "
+    "# Addition\n",
+    "a = 3\n",
+    "b = 7\n",
+    "total = a + b\n",
+    "print(total)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "7f800850",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# subtraction\n",
+    "a = 3\n",
+    "b = 7\n",
+    "total = a - b\n",
+    "print(total)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "51eaca9e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.3333333333333335\n"
+     ]
+    }
+   ],
+   "source": [
+    "# division\n",
+    "a = 10\n",
+    "b = 3\n",
+    "total = a / b\n",
+    "print(total)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "67ae41ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "# multiplication\n",
+    "a = 10\n",
+    "b = 3\n",
+    "total = a * b\n",
+    "print(total)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "fcf2563d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# power\n",
+    "a = 10\n",
+    "b = 3\n",
+    "total = a ** b\n",
+    "print(total)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "7eab33d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# modulus\n",
+    "a = 10\n",
+    "b = 2\n",
+    "total = a  %    b\n",
+    "print(total)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f29d91f",
+   "id": "e29448c6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1240,7 +1359,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e04e3f06",
+   "id": "069542bb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1248,55 +1367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "115d8d62",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3d3bba83",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b041685f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7ae75f29",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dcff74d3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2dd23a34",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "40975c87",
+   "id": "0e64bef7",
    "metadata": {},
    "outputs": [],
    "source": []
