--- a/python tutorial.ipynb
+++ b/python tutorial.ipynb
@@ -1042,7 +1042,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd49df45",
+   "id": "c876b84f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1050,7 +1050,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88863054",
+   "id": "5439e110",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1058,7 +1058,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65f7ed1b",
+   "id": "662fe878",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1066,7 +1066,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66686143",
+   "id": "93f6a6f3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1074,7 +1074,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "207c24b4",
+   "id": "bec71298",
    "metadata": {},
    "outputs": [
     {
@@ -1097,7 +1097,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a3b3d43",
+   "id": "d794949a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1110,7 +1110,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "105e0815",
+   "id": "3db86188",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1120,7 +1120,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "506433c9",
+   "id": "405841d3",
    "metadata": {},
    "outputs": [
     {
@@ -1141,7 +1141,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7b439ad9",
+   "id": "99ba95e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1151,7 +1151,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d48f1975",
+   "id": "865dbc73",
    "metadata": {},
    "outputs": [
     {
@@ -1172,7 +1172,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "7cf8b538",
+   "id": "ddf04d1d",
    "metadata": {},
    "outputs": [
     {
@@ -1193,7 +1193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "748f2801",
+   "id": "c1e8915a",
    "metadata": {},
    "source": [
     "# Operators In Python\n",
@@ -1210,7 +1210,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3101be45",
+   "id": "34f18fca",
    "metadata": {},
    "source": [
     "# Arithmetic"
@@ -1219,7 +1219,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "d0aa014b",
+   "id": "ea0e7863",
    "metadata": {},
    "outputs": [
     {
@@ -1241,7 +1241,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "0d6309de",
+   "id": "2524b6fb",
    "metadata": {},
    "outputs": [
     {
@@ -1263,7 +1263,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "f989eff5",
+   "id": "659e59c5",
    "metadata": {},
    "outputs": [
     {
@@ -1285,7 +1285,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "c30c438e",
+   "id": "431f2d53",
    "metadata": {},
    "outputs": [
     {
@@ -1307,7 +1307,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "c22d48ad",
+   "id": "14ae63ee",
    "metadata": {},
    "outputs": [
     {
@@ -1329,7 +1329,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "2cdace18",
+   "id": "db1add48",
    "metadata": {},
    "outputs": [
     {
@@ -1349,9 +1349,445 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "310a94dc",
+   "metadata": {},
+   "source": [
+    "# Assignment Operator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "0686aff0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# eual sign\n",
+    "name = \"olaitan\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "d9c51d70",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "# increament\n",
+    "a = 4\n",
+    "a+=2 # increase the values of a with 2\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "f2e30d93",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# decreament\n",
+    "a = 4\n",
+    "a-=2 # increase the values of a with 2\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d82e9229",
+   "metadata": {},
+   "source": [
+    "# Comparision Operator\n",
+    "it will return boolean result: True or False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "3166b3b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# >\n",
+    "a =10\n",
+    "b= 15\n",
+    "a > b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "1f535ec4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# >=\n",
+    "a =10\n",
+    "b= 10\n",
+    "a >= b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "ebbd5f23",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# <\n",
+    "a =10\n",
+    "b= 15\n",
+    "a < b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "c1a8aefc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# <=\n",
+    "a =10\n",
+    "b= 15\n",
+    "a <= b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "fb351d62",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# ==\n",
+    "a =15\n",
+    "b= 15\n",
+    "a == b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "252ebff3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# ==\n",
+    "a =15\n",
+    "b= 15\n",
+    "a != b"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88bf695c",
+   "metadata": {},
+   "source": [
+    "# MemberShip\n",
+    "it also return a boolean result\n",
+    "\n",
+    "is, is not"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "54fa7753",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name = \"olaitan\"\n",
+    "name2 = \"Olaitan\"\n",
+    "name is name2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "09be9561",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name is not name2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee1089f0",
+   "metadata": {},
+   "source": [
+    "# Identity\n",
+    "it also return boolean result\n",
+    "in, not in"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "a9d5e1c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name = \"olaitan\"\n",
+    "\"O\" in name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "835bc376",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"O\" not in name"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3d73832",
+   "id": "1e069580",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Logical Operator\n",
+    "it also return boolean result\n",
+    "- and or"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "03d0684e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = 6\n",
+    "b = 8\n",
+    "c = 19\n",
+    "(a> b) or (a<c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "92338d49",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(a> b) and (a<c)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8abfadc8",
+   "metadata": {},
+   "source": [
+    "# Bitwise\n",
+    "| and &"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "935c7984",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = 6\n",
+    "b = 8\n",
+    "c = 19\n",
+    "((a> b))  |  ((a<c))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "4c05a816",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = 6\n",
+    "b = 8\n",
+    "c = 19\n",
+    "((a> b))  &  ((a<c))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d597e85e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1359,7 +1795,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae344773",
+   "id": "22d74b47",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1367,7 +1803,287 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0195f817",
+   "id": "dd25fd29",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fb0ca843",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "357b4b4d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c1c87df",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c184d8c5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b581454",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "1. What are the rules for naming a variable in Python?\n",
+    "2. Can a variable start with a number in Python?\n",
+    "3. Is Python case-sensitive when it comes to variable names?\n",
+    "4. Are keywords allowed as variable names in Python?\n",
+    "5. What is the purpose of using underscores (_) in variable names?\n",
+    "6. How do you choose a meaningful and descriptive variable name in Python?\n",
+    "7. Can a variable name contain spaces?\n",
+    "8. Explain the concept of snake_case and CamelCase in Python variable naming.\n",
+    "9. What is the significance of the 'self' variable in Python classes?\n",
+    "10. Why is it important to choose a variable name that reflects its purpose?\n",
+    "\n",
+    "11. Differentiate between the '==' and 'is' operators in Python.\n",
+    "12. Explain the use of the '+=', '-=', '*=', and '/=' operators in Python.\n",
+    "13. What is the purpose of the '%' operator in Python?\n",
+    "14. How does the '//' operator differ from the '/' operator?\n",
+    "15. What is the difference between 'and' and 'or' logical operators in Python?\n",
+    "16. Explain the purpose of the 'not' operator in Python.\n",
+    "17. How does the 'in' operator work in Python?\n",
+    "18. What is the ternary operator in Python, and how is it used?\n",
+    "19. Discuss the role of the bitwise operators (&, |, ^, ~) in Python.\n",
+    "20. Can you explain the difference between '==' and '!=' operators in Python?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69de435d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "044339ce",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36662d6e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e59ea17e",
+   "metadata": {},
+   "source": [
+    "# Data Type In Python\n",
+    "Mutable: they are kind of datatype that can be modify after declaration\n",
+    "1. list: (sequence type)\n",
+    "2. dictionary: (mappping type)\n",
+    "\n",
+    "Immutable: they are kind of datatype that can not be modify after declaration\n",
+    "1. number: float, int  \n",
+    "2. str   (sequence type)\n",
+    "3. tuple  (sequence type)\n",
+    "4. set   (set type )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0864f40f",
+   "metadata": {},
+   "source": [
+    "# Number "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8fd2eb26",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = 12 # int\n",
+    "b = 12.5 # float"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "472e567d",
+   "metadata": {},
+   "source": [
+    "# Str\n",
+    "Str is a sequence of character joined together"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4cee03a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = 'olaitan'\n",
+    "name1 = \"olaitan\"\n",
+    "introudtion = \"\"\"this \n",
+    "                is \n",
+    "                introduction \n",
+    "                to python\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8363d5df",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f349a744",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "adf94409",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ebd12dd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d3d1c7c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5721b77e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6ae08e2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "747ca516",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9abeb05a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "3b80939e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.5"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "j = 5\n",
+    "k = 2\n",
+    "j / k"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "d8a862a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "j = 5\n",
+    "k = 2\n",
+    "j // k"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6ebb5e3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a71009a2",
    "metadata": {},
    "outputs": [],
    "source": []
