--- a/work.ipynb
+++ b/work.ipynb
@@ -426,83 +426,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
-   "id": "8e47cfe5",
+   "execution_count": 250,
+   "id": "60bba29c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.00       382\n",
-       "2.00       312\n",
-       "3.00       165\n",
-       "5.00        76\n",
-       "10.00       35\n",
-       "4.00        33\n",
-       "6.00        24\n",
-       "20.00       24\n",
-       "15.00       23\n",
-       "12.00       14\n",
-       "8.00        13\n",
-       "2000.00      8\n",
-       "1500.00      8\n",
-       "16.00        8\n",
-       "25.00        7\n",
-       "14.00        6\n",
-       "35.00        5\n",
-       "18.00        5\n",
-       "9.00         4\n",
-       "13.00        4\n",
-       "2500.00      4\n",
-       "19.00        4\n",
-       "30.00        4\n",
-       "1200.00      3\n",
-       "100.00       2\n",
-       "3000.00      2\n",
-       "1100.00      2\n",
-       "40.00        2\n",
-       "500.00       2\n",
-       "2200.00      1\n",
-       "1600.00      1\n",
-       "80.00        1\n",
-       "60.00        1\n",
-       "2300.00      1\n",
-       "50.00        1\n",
-       "4000.00      1\n",
-       "17.00        1\n",
-       "7.00         1\n",
-       "22.00        1\n",
-       "1800.00      1\n",
-       "300.00       1\n",
-       "600.00       1\n",
-       "11.00        1\n",
-       "38.00        1\n",
-       "Name: CropOrgFYM, dtype: int64"
+       "10.00     557\n",
+       "15.00     309\n",
+       "6.00      305\n",
+       "8.00      284\n",
+       "5.00      257\n",
+       "12.00     221\n",
+       "20.00     218\n",
+       "4.00      206\n",
+       "3.00      140\n",
+       "9.00      123\n",
+       "2.00       91\n",
+       "7.00       80\n",
+       "16.00      71\n",
+       "13.00      64\n",
+       "18.00      55\n",
+       "30.00      50\n",
+       "14.00      43\n",
+       "22.00      41\n",
+       "25.00      37\n",
+       "50.00      30\n",
+       "40.00      27\n",
+       "11.00      17\n",
+       "24.00      15\n",
+       "1.00       14\n",
+       "17.00       8\n",
+       "23.00       8\n",
+       "32.00       7\n",
+       "21.00       7\n",
+       "36.00       5\n",
+       "26.00       5\n",
+       "19.00       4\n",
+       "45.00       4\n",
+       "28.00       3\n",
+       "60.00       3\n",
+       "35.00       3\n",
+       "100.00      3\n",
+       "27.00       3\n",
+       "33.00       2\n",
+       "34.00       2\n",
+       "44.00       1\n",
+       "69.00       1\n",
+       "48.00       1\n",
+       "37.00       1\n",
+       "38.00       1\n",
+       "Name: BasalDAP, dtype: int64"
       ]
      },
-     "execution_count": 246,
+     "execution_count": 250,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train[\"CropOrgFYM\"].value_counts()"
+    "train[\"BasalDAP\"].value_counts()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5713b6a",
+   "id": "f0b2ee42",
    "metadata": {},
    "outputs": [],
    "source": [
-    "TransplantingIrrigationPowerSource, TransIrriCost, Ganaura"
+    "NoFertilizerAppln"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76d96de5",
+   "id": "005732b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TransplantingIrrigationPowerSource, TransIrriCost, Ganaura, CropOrgFYM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3418f9a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c94c4ac6",
+   "id": "898d0ce3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,7 +533,7 @@
     "\n",
     "\"CropEstMethod\", \"RcNursEstDate\", \"SeedingSowingTransplanting\", \"SeedlingsPerPit\" \"NursDetFactor\", \"TransDetFactor\",\n",
     "\"TransplantingIrrigationHours\", \"TransplantingIrrigationSource\", \"OrgFertilizers\", \"StandingWater\",\n",
-    "]"
+    "\"PCropSolidOrgFertAppMethod\", \"NoFertilizerAppln\", \"CropbasalFerts\",]"
    ]
   },
   {
@@ -642,7 +652,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a1bb429",
+   "id": "a2f32b13",
    "metadata": {},
    "outputs": [],
    "source": [
