--- a/python tutorial.ipynb
+++ b/python tutorial.ipynb
@@ -1936,7 +1936,7 @@
    "metadata": {},
    "source": [
     "# Str\n",
-    "Str is a sequence of character joined together"
+    "Str is a sequence of characters joined together"
    ]
   },
   {
@@ -1955,12 +1955,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1ffdc7ed",
+   "cell_type": "markdown",
+   "id": "715ea569",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Indexing and Slicing\n",
+    "- indexing is the process of fetching out a character from str or any other datatype in a position\n",
+    "- slicing is the process of fetching out character(s) from str or any other datatype within range of positions\n",
+    "\n",
+    "## Note\n",
+    "Data type in python has zero base index"
+   ]
   },
   {
    "cell_type": "code",
@@ -1972,35 +1977,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "94aba82a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'t'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "introudtion = \"\"\"this is introduction to python\"\"\"\n",
+    "# return the first t from the variable above\n",
+    "introudtion[0]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "3dc487f4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'t'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# return the second t from the variable above\n",
+    "introudtion[10]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "ce6f3c69",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'o'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# return the second o from the variable above\n",
+    "introudtion[18] # forward indexing"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "b3ef69ee",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'i'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "introudtion = \"\"\"this is introduction to python\"\"\"\n",
+    "#return the first third i from the variable above usinf backward indexing\n",
+    "introudtion[-22]"
+   ]
   },
   {
    "cell_type": "code",
@@ -2008,74 +2071,479 @@
    "id": "5110fe6f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# using backward indexing return y from the varibble above"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "67d71bf4",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'natialO'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# reverse str\n",
+    "name = \"Olaitan\"\n",
+    "name[::-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e1a8f67",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "variablename[startpoint:   endpoint:    NOsteps]\n",
+    "\n",
+    "startpoint: index NO\n",
+    "endpoint: posistin No"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "30c09d2b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'is intro'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "introudtion = \"\"\"this is introduction to python\"\"\"\n",
+    "#  return 'is intro' from the variable above\n",
+    "introudtion[5:13]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "e63d204a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ction to'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#  return 'ction to' from the variable above\n",
+    "introudtion[15:23]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "b80eb2cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'introductio'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "introudtion = \"\"\"this is introduction to python\"\"\"\n",
+    "introudtion[8:19]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "9589926f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'itouto'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#  return 'itouto' from the variable above\n",
+    "introudtion[8:19:2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "299454af",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'s rcn h'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "introudtion = \"\"\"this is introduction to python\"\"\"\n",
+    "#  return 's rcn h' from the variable above\n",
+    "introudtion[3:    :4]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ebb566a",
+   "metadata": {},
+   "source": [
+    "# Str Method in Python\n",
+    "str method is a function that is associated with str object"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "2423c4bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'    tolu     '"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name= \"    tolu     \"\n",
+    "name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9816534",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# strip().. remove excessive white space before and after the str"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "ccab540c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'tolu'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name.strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "a7f14df5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<<<???tolu?????//////'"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name= \"<<<???tolu?????//////\"\n",
+    "name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "e2eeba79",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'tolu'"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name.strip(\"/\").strip(\"<\").strip(\"?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f1992102",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "24bd1731",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "please enter your first name olaitan\n",
+      "please enter your last name kazeem\n",
+      "please enter your age 12\n",
+      "What is the name of your school  lak\n",
+      "Hello everyone, my fullname is olaitan kazeem i am 12 year olds and the name of my school is  lak\n"
+     ]
+    }
+   ],
+   "source": [
+    "first_name = input(\"please enter your first name \")\n",
+    "last_name = input(\"please enter your last name \")\n",
+    "age = input(\"please enter your age \")\n",
+    "school = input(\"What is the name of your school  \")\n",
+    "\n",
+    "print(\"Hello everyone, my fullname is\" , first_name, last_name, \"i am\" , age, \n",
+    "     \"year olds and the name of my school is \", sch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "d1df6d42",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello everyone, my fullname is olaitan kazeem i am 12 year olds and the name of my school is lak\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hello everyone, my fullname is {} {} i am {} year olds and the name of my school is {}\".format(first_name,last_name, age, school))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "e272edfd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# find\n",
+    "name = \"kola\"\n",
+    "name.find(\"z\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "67671fb0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# endswith:: it will return boolean result\n",
+    "name = \"Damilare\"\n",
+    "name.endswith(\"e\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "1d78608f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'i love python because i can build cool artificial intelligent application with it'"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "var = \"i love python because i can build cool AI application with it\" \n",
+    "var = var.replace(\"AI\", \"artificial intelligent\")\n",
+    "var"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "de99ac43",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# split\n",
+    "\n",
+    "h=var.split()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "f014c4f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(h)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "b833dbb2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['people', 'from', 'africa', 'are', 'black', 'like', 'tolu']"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "u =\"people>from>africa>are>black>like>tolu\"\n",
+    "u.split(\">\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68e182cc",
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8eab8262",
+   "id": "e982baed",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "b7e2a927",
+   "execution_count": null,
+   "id": "1a054ab3",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2.5"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "j = 5\n",
-    "k = 2\n",
-    "j / k"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "id": "e41731fd",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "j = 5\n",
-    "k = 2\n",
-    "j // k"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21ecf64e",
+   "id": "7c7dad44",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "75c8f1b3",
    "metadata": {},
    "outputs": [],
    "source": []
