--- a/python tutorial.ipynb
+++ b/python tutorial.ipynb
@@ -3460,49 +3460,332 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0f9d576c",
+   "cell_type": "markdown",
+   "id": "5684e0e1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Control Flow in Python\n",
+    "\n",
+    "- control flow are order at which pyton code is been execute.\n",
+    "\n",
+    "1. conditional Statement\n",
+    "   a. if\n",
+    "    b. elif\n",
+    "    c. else\n",
+    "    \n",
+    "2. Loop Statement\n",
+    "     a. For loop\n",
+    "     b. While loop\n",
+    "     \n",
+    "3. Loop Control Statement\n",
+    "     a. break\n",
+    "     b. continue\n",
+    "  \n",
+    "4. Error Handling Statement\n",
+    "     a.try\n",
+    "     b. except\n",
+    "     c. finally"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "357e69e1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "we may need to hear from the boss\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 6\n",
+    "if a <2:\n",
+    "    print(\"we are good to go\")    \n",
+    "    \n",
+    "else:\n",
+    "    print(\"we may need to hear from the boss\")\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "ae95b413",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "we have to wait because the boss asked to\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = 3\n",
+    "if b>4:\n",
+    "    print(\"some set of people has gone\")\n",
+    "elif b==7:\n",
+    "    print(\"we are still waiting for the orders\")\n",
+    "elif b <7:\n",
+    "    print(\"we have to wait because the boss asked us to\")\n",
+    "else:\n",
+    "    print(\"what did you think we do?\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "c572fef4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "# for \n",
+    "lis = [1,2,3,4,5,6,7,8]\n",
+    "for element in lis:\n",
+    "    print(element)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "ce2a317a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ages = [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20]\n",
+    "# from the list of ages above, sepetate the odd and the even ages in different list\n",
+    "odd_age = []\n",
+    "even_age = []\n",
+    "\n",
+    "for age in ages:\n",
+    "    if age%2==0:\n",
+    "        even_age.append(age)\n",
+    "    else:\n",
+    "        odd_age.append(age)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "d190fe39",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 5, 7, 9, 11, 13, 15, 17, 19]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(odd_age)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "80744cfb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 6, 8, 10, 12, 14, 16, 18, 20]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(even_age)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "acdc4704",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "we are inside while loop 10\n",
+      "we are inside while loop 9\n",
+      "we are inside while loop 8\n",
+      "we are inside while loop 7\n",
+      "we are inside while loop 6\n",
+      "we are inside while loop 5\n",
+      "we are inside while loop 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 10\n",
+    "while a>3:\n",
+    "    print(\"we are inside while loop {}\".format(a))\n",
+    "    a-=1"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d190fe39",
+   "id": "75076d31",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "916194a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ages = [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20]\n",
+    "# from the list of ages above, sepetate the odd and the even ages in different list\n",
+    "odd_age = []\n",
+    "even_age = []\n",
+    "\n",
+    "for age in ages:\n",
+    "    if age%2==0:\n",
+    "        even_age.append(age)\n",
+    "    else:\n",
+    "        odd_age.append(age)\n",
+    "    if age==14:\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "6a98c0a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3, 5, 7, 9, 11, 13]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "odd_age"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "58376c49",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 4, 6, 8, 10, 12, 14]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "even_age"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "6247f1ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ages = [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20]\n",
+    "# from the list of ages above, sepetate the odd and the even ages in different list\n",
+    "odd_age = []\n",
+    "even_age = []\n",
+    "\n",
+    "for age in ages:\n",
+    "    if (age==14) or (age==13):\n",
+    "        continue\n",
+    "        \n",
+    "    if age%2==0:\n",
+    "        even_age.append(age)\n",
+    "    else:\n",
+    "        odd_age.append(age)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "13c7ef64",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3, 5, 7, 9, 11, 15, 17, 19]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "odd_age"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "e6785e98",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 4, 6, 8, 10, 12, 16, 18, 20]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "even_age"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "afe3ab91",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3510,7 +3793,47 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80744cfb",
+   "id": "92b25e26",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3dcefe82",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a51cc734",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3acb9dda",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a655b86d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63f99bac",
    "metadata": {},
    "outputs": [],
    "source": []
