--- a/python tutorial.ipynb
+++ b/python tutorial.ipynb
@@ -4038,7 +4038,14 @@
    "source": [
     "all_names = [\"olaitan\", \"james\", \"smith\", \"ada\", \"ade\", \"alao\", \"Lukman\", \"richael\", \"moji\", \"kazeem\"]\n",
     "name_with_less_char = []\n",
-    "name_with_more_char = []"
+    "name_with_more_char = []\n",
+    "\n",
+    "for name in all_names:\n",
+    "    if len(name)>5:\n",
+    "      name_with_more_char.append(name)  \n",
+    "    else:\n",
+    "      name_with_less_char.append(name)  \n",
+    "        "
    ]
   },
   {
@@ -4083,14 +4090,7 @@
    "id": "388e9621",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "for name in all_names:\n",
-    "    if len(name)>5:\n",
-    "      name_with_more_char.append(name)  \n",
-    "    else:\n",
-    "      name_with_less_char.append(name)  \n",
-    "        "
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -4331,7 +4331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "id": "bea0f45e",
    "metadata": {},
    "outputs": [],
@@ -4343,7 +4343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "id": "89ee967a",
    "metadata": {},
    "outputs": [
@@ -4353,7 +4353,7 @@
        "42"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4525,7 +4525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "efbf3e68",
    "metadata": {},
    "outputs": [
@@ -4533,7 +4533,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "guess any number to win xmax chiecken 6\n",
+      "guess any number to win xmax chiecken 42\n",
       "please check your try block to fix the error\n",
       "we are trying our better\n"
      ]
@@ -4542,7 +4542,7 @@
    "source": [
     "try:\n",
     "    while True:\n",
-    "        guess_num =(input(\"guess any number to win xmax chiecken \"))\n",
+    "        guess_num =int(input(\"guess any number to win xmax chiecken \"))\n",
     "        if guess_num==secret_number:\n",
     "            print(\"Congratulation, you just won yourself a Nigeria chicken\")\n",
     "            break\n",
@@ -4553,14 +4553,8 @@
     "except:\n",
     "    print(\"please check your try block to fix the error\")\n",
     "    \n",
-    "    \n",
-    "print(\"we are trying our better\")\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "finally:    \n",
+    "    print(\"we are trying our better\")"
    ]
   },
   {
@@ -4599,11 +4593,7 @@
     "        elif guess_num<secret_number:\n",
     "                print(\"the guessed is less than the secret number\")\n",
     "                \n",
-    "print(\"we are trying our best\")\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "print(\"we are trying our best\")"
    ]
   },
   {
@@ -4616,27 +4606,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "dd003066",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "all_names = [\"olaitan\", \"james\", \"smith\", \"ada\", \"ade\", \n",
+    "             \"ayo\", \"ken\", \"tolu\", \"alao\", \"Lukman\", \"richael\", \"moji\", \"kazeem\"]\n",
+    "name_with_less_char = []\n",
+    "name_with_more_char = []\n",
+    "\n",
+    "for name in all_names:\n",
+    "    if len(name)==3:\n",
+    "        continue\n",
+    "    if len(name)>5:\n",
+    "      name_with_more_char.append(name)  \n",
+    "    else:\n",
+    "      name_with_less_char.append(name)  \n",
+    "        "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "9b80212e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['james', 'smith', 'tolu', 'alao', 'moji']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name_with_less_char"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "c72e1335",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['olaitan', 'Lukman', 'richael', 'kazeem']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name_with_more_char"
+   ]
   },
   {
    "cell_type": "code",
@@ -4647,28 +4677,47 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "68f92918",
+   "cell_type": "markdown",
+   "id": "6288c84c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Function\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "b27646f8",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 5\n",
+    "b =6\n",
+    "c = a + b\n",
+    "print(c)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "07f97211",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# creating non parameter function\n",
+    "\n",
+    "def greeting(       ): \n",
+    "    print(\"Welcome to Lasop\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -4680,19 +4729,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "876e588c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to Lasop\n"
+     ]
+    }
+   ],
+   "source": [
+    "greeting()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "6a94c6be",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# function to add two numbers\n",
+    "def add_two_num(  t, o  ):\n",
+    "    total = t + o\n",
+    "    return total"
+   ]
   },
   {
    "cell_type": "code",
@@ -4704,19 +4768,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "b4512ded",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "87"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "add_two_num(20, 67)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "b097daf3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def olaitan():\n",
+    "    counter = 1\n",
+    "    while True:\n",
+    "        if counter<=3:\n",
+    "            guess_num = int (input(\"guess any number to win xmax chiecken \"))\n",
+    "            if guess_num==secret_number:\n",
+    "                print(\"Congratulation, you just won yourself a Nigeria chicken\")\n",
+    "                break\n",
+    "        else:\n",
+    "            print(\"try again some othetime\")\n",
+    "            break        \n",
+    "        counter+=1\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -4776,11 +4866,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "33e4e701",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "guess any number to win xmax chiecken 56\n",
+      "guess any number to win xmax chiecken 34\n",
+      "guess any number to win xmax chiecken 42\n",
+      "Congratulation, you just won yourself a Nigeria chicken\n"
+     ]
+    }
+   ],
+   "source": [
+    "olaitan()"
+   ]
   },
   {
    "cell_type": "code",
