--- a/python tutorial.ipynb
+++ b/python tutorial.ipynb
@@ -4678,7 +4678,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6288c84c",
+   "id": "db898a44",
    "metadata": {},
    "source": [
     "# Function\n",
@@ -4810,11 +4810,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "fd81a0b1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What are you ordering Today? rice\n",
+      "How many plate of rice do you need? 5\n",
+      "You are buying 5000 Naira for this order\n"
+     ]
+    }
+   ],
+   "source": [
+    "type_of_food = input(\"What are you ordering Today? \")\n",
+    "if (type_of_food==\"rice\") or (type_of_food==\"jollof rice\"):\n",
+    "    plate= int(input(\"How many plate of rice do you need? \"))\n",
+    "    price = 1000\n",
+    "    total = plate * price\n",
+    "    print(f\"You are buying {total} Naira for this order\")"
+   ]
   },
   {
    "cell_type": "code",
